...
                                      .headlineMedium,
                                  textAlign: TextAlign.center,
                                ),
                                const SizedBox(height: 40),
                                // Email field
                                TextFieldWidget(
                                    key: const Key('emailTextField'),
                                    controller: state.model.emailController,
                                    label:
                                        LocalText.of(context.l10n?.emailField),
                                    hint: LocalText.of(
                                        context.l10n?.emailHintField)),
                                const SizedBox(height: 20),
                                // Password field
                                TextFieldWidget(
                                    key: const Key('passTextField'),
                                    controller: state.model.passController,
                                    obscureText: !state.model.showPass,
                                    suffixIcon: IconButton(
                                      onPressed: () {
                                        context
                                            .read<LoginBloc>()
...
